--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,14 +1,21 @@
 {
     "name": "bithunter-frontend",
-    "version": "0.1.0",
+    "version": "1.0.0",
     "private": true,
     "dependencies": {
+        "@emotion/react": "^11.10.5",
+        "@emotion/styled": "^11.10.5",
+        "@mui/material": "^5.11.10",
+        "@mui/icons-material": "^5.11.9",
+        "axios": "^1.3.4",
+        "chart.js": "^4.2.1",
+        "formik": "^2.2.9",
         "react": "^18.2.0",
+        "react-chartjs-2": "^5.2.0",
         "react-dom": "^18.2.0",
-        "react-scripts": "5.0.1",
-        "axios": "^1.4.0",
-        "chart.js": "^4.3.0",
-        "react-chartjs-2": "^5.2.0"
+        "react-router-dom": "^6.8.1",
+        "react-scripts": "^5.0.1",
+        "yup": "^0.32.11"
     },
     "scripts": {
         "start": "react-scripts start",
