--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,18 +1,19 @@
-Django==4.2
-djangorestframework==3.14
-channels==4.0
-channels-redis==4.1
-celery==5.3
-redis==4.5
-ccxt==4.0
-cryptography==41.0
-requests==2.31
-tensorflow==2.13
-scikit-learn==1.3
-numpy==1.24
-pandas==2.0
-python-telegram-bot==20.0
-django-cors-headers==4.1
-environ==1.0
-redis==4.5.5
-daphne==4.0.0
+Django==4.2.7
+djangorestframework==3.14.0
+psycopg2-binary==2.9.7
+django-filter==23.5
+django-ratelimit==4.1.0
+django-cryptography==1.0
+django-otp==2.0.0
+channels==4.0.0
+channels-redis==4.1.0
+celery==5.3.4
+redis==5.0.1
+django-logging==0.9.3
+sentry-sdk==1.40.0
+django-prometheus==2.3.1
+tensorflow==2.15.0
+pytest==7.4.3
+pytest-django==4.5.2
+djangorestframework-simplejwt==5.3.0
+ccxt==4.2.0
