--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,3 +17,12 @@ pytest==7.4.3
 pytest-django==4.5.2
 djangorestframework-simplejwt==5.3.0
 ccxt==4.2.0
+pyotp
+boto3
+pytest
+pytest-django
+django-prometheus
+sentry-sdk
+drf-spectacular
+redis
+celery
